--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,6 @@ edition = "2024"
 
 [dependencies]
 futures = "0.3.31"
+rand = "0.9.0"
 thirtyfour = "0.35.0"
 tokio = { version = "1.44.1", features = ["full"] }
