--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2024"
 
 [dependencies]
 futures = "0.3.31"
+num_cpus = "1.16.0"
 rand = "0.9.1"
 thirtyfour = "0.35.0"
 tokio = { version = "1.44.2", features = ["full"] }
